# webassembly

./: calculator.wat
area-host/: Cargo.toml
area-host/src/: main.rs
calc/: Cargo.toml
calc/src/: lib.rs
host/: Cargo.toml
importer/: Cargo.toml
importer/src/: lib.rs
memory/memoryguest/: Cargo.toml
memory/memoryhost/: Cargo.toml
memory/memoryhost/src/: main.rs
rust-host/: Cargo.toml
rust-host/src/: main.rs
src/: calc.wasm  index.html
wapc/helloguest/: Cargo.toml
wapc/helloguest/src/: lib.rs
wapc/hellohost/: Cargo.toml
wapc/hellohost/src/: main.rs
wasmcloud/booklib/: Cargo.toml  manifest.yaml
wasmcloud/booklib/src/: lib.rs
wasmcloud/pingpong/: Makefile  manifest.yaml
wasmcloud/pingpong/ping-interface/: Cargo.toml
wasmcloud/pingpong/ping-interface/src/: generated.rs  lib.rs
wasmcloud/pingpong/pinger/: Cargo.toml
wasmcloud/pingpong/pinger/src/: lib.rs
wasmcloud/pingpong/ponger/: Cargo.toml
wasmcloud/pingpong/ponger/src/: lib.rs
wasmcloud/playervault/: Cargo.toml
wasmcloud/playervault/src/: lib.rs
wordcount/: Cargo.toml  sample.txt
wordcount/src/: main.rs
