[package]
name = "ponger"
version = "0.1.0"
authors = ["Matthew Que <matthew.neale.que@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = "0.4.0"
wasmcloud-actor-core = { version = "0.2.2", features = ["guest"] }
ping-interface = { path = "../ping-interface"}

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true